--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        min-height: 100vh;
+        min-height: 100dvh;
         padding: 20px;
       }
 
